fix body overflowing

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -9,6 +9,7 @@ html {
 html, body {
   height: 100%;
   width: 100%;
+  overflow-y: auto;
 }
 
 body {
